--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>Dynamic Spline Chart</title>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+  <!--<script type = "text/javascript" src = "filename.js" ></script> -->
 </head>
 <body>
-<div id="chartContainer" style="height: 370px; width:100%;"></div>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> 
+  <!-- Plotly chart will be drawn inside this DIV -->
+  <div id="chartContainer" style="height: 370px; width:100%;"></div>
+  <script>
+    /* JAVASCRIPT CODE GOES HERE */
+    window.onload = function() {
+      var dps = [];
+      var chart = new CanvasJS.Chart("chartContainer", {
+        exportEnabled: true,
+        title: {
+          text: "Dynamic Spline Chart"
+        },
+        axisY: {
+          includeZero: false
+        },
+        data: [{
+          type: "spline",
+          markerSize: 0,
+          dataPoints: dps
+        }]
+      });
+      var xVal = 0;
+      var yVal = 100;
+      var updateInterval = 1000;
+      var dataLength = 50; // number of dataPoints visible at any point
+      var updateChart = function(count) {
+        count = count || 1;
+        // count is number of times loop runs to generate random dataPoints.
+        for (var j = 0; j < count; j++) {
+          yVal = yVal + Math.round(5 + Math.random() * (-5 - 5));
+          dps.push({
+            x: xVal,
+            y: yVal
+          });
+          xVal++;
+        }
+        if (dps.length > dataLength) {
+          dps.shift();
+        }
+        chart.render();
+      };
+      updateChart(dataLength);
+      setInterval(function() {
+        updateChart()
+      }, updateInterval);
+    }
+  </script>
 </body>
 </html>
